Added i18n pt-BR message

--- a/lib/generators/flexi_prepare/templates/pt-BR.yml
+++ b/lib/generators/flexi_prepare/templates/pt-BR.yml
@@ -189,7 +189,7 @@ pt-BR:
       messages:
         taken: "já está em uso"
         record_invalid: "A validação falhou: %{errors}"
-        
+        attachment_size: "deve ter o tamanho entre %{min} e %{max} bytes"
     models: 
       user: "Usuários"
       
