--- a/lib/generators/flexi/config/templates/pt-BR.yml
+++ b/lib/generators/flexi/config/templates/pt-BR.yml
@@ -9,7 +9,7 @@ pt-BR:
     - Sex
     - Sáb
     abbr_month_names:
-    - 
+    -
     - Jan
     - Fev
     - Mar
@@ -35,7 +35,7 @@ pt-BR:
       long: ! '%d de %B de %Y'
       short: ! '%d de %B'
     month_names:
-    - 
+    -
     - Janeiro
     - Fevereiro
     - Março
@@ -95,12 +95,16 @@ pt-BR:
       month: Mês
       second: Segundo
       year: Ano
-  errors: &errors
+  errors:
     format: ! '%{attribute} %{message}'
+    header:
+      title: Verifique os campos marcados
+      body: Preencha corretamente os campos abaixo e tente novamente.
     messages:
       accepted: deve ser aceito
       blank: não pode ficar em branco
-      confirmation: não está de acordo com a confirmação
+      present: deve ficar em branco
+      confirmation: não é igual a %{attribute}
       empty: não pode ficar vazio
       equal_to: deve ser igual a %{count}
       even: deve ser par
@@ -115,6 +119,9 @@ pt-BR:
       not_an_integer: não é um número inteiro
       odd: deve ser ímpar
       record_invalid: ! 'A validação falhou: %{errors}'
+      restrict_dependent_destroy:
+        one: "Não é possível excluir o registro pois existe um %{record} dependente"
+        many: "Não é possível excluir o registro pois existem %{record} dependentes"
       taken: já está em uso
       too_long: ! 'é muito longo (máximo: %{count} caracteres)'
       too_short: ! 'é muito curto (mínimo: %{count} caracteres)'
@@ -199,6 +206,7 @@ pt-BR:
       short: ! '%d/%m, %H:%M h'
     pm: ''
 
+  # Will Paginate
   will_paginate:
     next_label: Próximos &#8594;
     page_entries_info:
@@ -215,10 +223,3 @@ pt-BR:
         zero: Nenhum %{model} encontrado
     page_gap: ! '&hellip;'
     previous_label: ! '&#8592; Anteriores'
-  # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
-  activemodel:
-    errors:
-      <<: *errors
-  activerecord:
-    errors:
-      <<: *errors
